<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::create('objetivos_aprendizaje', function (Blueprint $table) {
            $table->id();
            $table->foreignId('escenario_id')->constrained('escenarios');
            $table->text('contenido');
            $table->unsignedInteger('orden');
            $table->timestamps();
        });
    }

    public function down(): void
    {
        Schema::dropIfExists('objetivos_aprendizaje');
    }
};
